--- a/src/Detection/yolo.yaml
+++ b/src/Detection/yolo.yaml
@@ -3,8 +3,8 @@ train: train/images
 val: val/images
 test: test/images
 
-nc: 4
+nc: 1
 
-names: [prohibitory,mandatory,danger,other]
+names: [street_sign]
 
 
